# dying-light-2-headtracking

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  manifest.json  mod.json  pixi.toml
.github/workflows/: build.yml  release.yml
libs/imgui/: imgui_impl_dx12.cpp
libs/kiero/: kiero.cpp
scripts/: build.ps1  deploy-config.ps1  deploy-release.ps1  deploy.ps1  detect-game.ps1  install.cmd  package-release.ps1  release.ps1  setup-libs.ps1  show-changelog.ps1  test-udp-receiver.py  uninstall.cmd  unrelease.ps1  update-deps.ps1  validate-release.ps1  vanilla.ps1
src/: dllmain.cpp  pch.h
src/core/: config.cpp  config.h  constants.h  hotkey_utils.cpp  hotkey_utils.h  logger.cpp  logger.h  mod.cpp  mod.h  path_utils.cpp  path_utils.h  rotation_math.h
src/hooks/: crosshair_hook.cpp  crosshair_hook.h  dx_hook.cpp  dx_hook.h  engine_camera_hook.cpp  engine_camera_hook.h  hook_manager.cpp  hook_manager.h  input_hook.cpp  input_hook.h  splash_skipper.cpp  splash_skipper.h
src/ui/: notification.cpp  notification.h
